--- a/style.css
+++ b/style.css
@@ -69,14 +69,15 @@ header a:hover {
 }
 .fa {
   color: #ffffff;
-  margin-right: 140px;
+  margin-right: 15%;
+  margin-top: -2%;
   float: right;
-  font-size: 100px;
+
+}
+.fa-angle-right:before {
+  font-size: 60px;
 }
 
-.awesome img:hover {
-  width: 1%;
-}
 /*________________________________________*/
 
 .like {
@@ -93,20 +94,21 @@ header a:hover {
   left: 5%;
 }
 .like div {
-  width: 218px;
+  width: 225px;
   background-color: #bc3183;
   float: right;
   height: 244px;
   position: relative;
 }
-.like img {
+.arrow2 {
   position: absolute;
-  top: 110px;
-  left: 45%;
+  top: 35%;
+  left: 48%;
 }
-.like img:hover {
-  width: 1%;
+.arrow2::before {
+  font-size: 80px;
 }
+
 /*______________________________________________*/
 
 main {
@@ -213,10 +215,13 @@ main img {
     width: 180px;
     letter-spacing: 1.5px;
   }
-  .awesome img {
-    margin-right: 20%;
-    width: 1.8%;
+  .fa {
+    margin-right: 23%;
   }
+  .fa-angle-right:before {
+    font-size: 40px;
+  }
+
 
   .like {
     float: left;
@@ -230,9 +235,8 @@ main img {
     height: 150px;
     width: 25%;
   }
-  .like img {
-    top: 65.31px;
-    right: 11%;
+  .arrow2::before {
+    font-size: 50px;
   }
 
   main img {
@@ -290,11 +294,11 @@ main img {
     font-size: 10.5px;
     letter-spacing: 0.75px;
   }
-  .awesome img {
-    margin-right: 80px;
-    width: 1.2%;
-    position: relative;
-    top: 7px;
+  .fa {
+    margin-top: 0%;
+  }
+  .fa-angle-right:before {
+    font-size: 18px;
   }
 
   .like span {
@@ -304,9 +308,12 @@ main img {
   .like div {
     height: 75px;
   }
-  .like img {
-    width: 8%;
-    top: 45%;
+  .arrow2::before {
+    font-size: 30px;
+  }
+  .arrow2 {
+    top: 28%;
+    left: 45%;
   }
 
   .content a {
